# InjectErr

./: .gitignore  injections.yml  pyproject.toml  readme.md
src/injecterr/: config.py  how.py  injections.py  main.py  post.py  pre.py
